<!-- SPDX-License-Identifier: GPL-3.0-or-later -->
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        app:key="reload_apps"
        app:title="@string/pref_reload_apps"
        app:summary="@string/pref_reload_apps_msg"
        app:iconSpaceReserved="false" />
    <Preference
        app:key="replay_onboarding"
        app:title="@string/pref_replay_onboarding"
        app:summary="@string/pref_replay_onboarding_msg"
        app:iconSpaceReserved="false" />
    <Preference
        app:key="replay_tour"
        app:title="@string/pref_replay_tour"
        app:summary="@string/pref_replay_tour_msg"
        app:iconSpaceReserved="false" />
    <Preference
        app:key="battery_optimization"
        app:title="@string/pref_battery_optimization"
        app:summary="@string/pref_battery_optimization_msg"
        app:iconSpaceReserved="false" />
</PreferenceScreen>