<!-- SPDX-License-Identifier: GPL-3.0-or-later -->
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:scrollIndicators="top|bottom"
    tools:ignore="UnusedAttribute">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="@dimen/padding_small"
        android:paddingHorizontal="@dimen/padding_medium"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_options"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textColor="?attr/colorOnSurface" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_very_small"
            android:text="@string/debloater_list_options_summary"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="?attr/colorOnSurfaceVariant" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear_filter_options"
            style="@style/Widget.AppTheme.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/padding_small"
            android:minHeight="40dp"
            android:text="@string/clear_filters"
            android:visibility="gone"
            app:icon="@drawable/ic_filter_list"
            tools:visibility="visible" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            android:textAppearance="@style/TextAppearance.AppTheme.TitleSmall"
            android:text="@string/debloat_list_type" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/list_types"
            android:theme="@style/Widget.AppTheme.ChipGroup.Filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/padding_very_small"
            app:itemSpacing="@dimen/padding_very_small"
            app:lineSpacing="@dimen/padding_very_small" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            android:textAppearance="@style/TextAppearance.AppTheme.TitleSmall"
            android:text="@string/debloat_removal_type" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/removal_types"
            android:theme="@style/Widget.AppTheme.ChipGroup.Filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/padding_very_small"
            app:itemSpacing="@dimen/padding_very_small"
            app:lineSpacing="@dimen/padding_very_small" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            android:textAppearance="@style/TextAppearance.AppTheme.TitleSmall"
            android:text="@string/filter" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/filter_options"
            android:theme="@style/Widget.AppTheme.ChipGroup.Filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/padding_very_small"
            app:itemSpacing="@dimen/padding_very_small"
            app:lineSpacing="@dimen/padding_very_small" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>
